--- a/generate-cli/package.json
+++ b/generate-cli/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "generate-cli",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cross-spawn": "^7.0.3",
-    "glob": "^9.3.2",
-    "handlebars": "^4.7.7",
-    "inquirer": "^8.2.5"
-  }
+	"name": "generate-cli",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cross-spawn": "^7.0.3",
+		"glob": "^9.3.2",
+		"inquirer": "^8.2.5",
+		"mustache": "^4.2.0"
+	}
 }
