chore: minor fixes

--- a/client-extensions/react-custom-element/client-extension.yaml
+++ b/client-extensions/react-custom-element/client-extension.yaml
@@ -7,7 +7,7 @@ react-custom-element:
     friendlyURLMapping: react-custom-element
     htmlElementName: react-custom-element
     instanceable: false
-    name: react-custom-element
+    name: React Custom Element
     portletCategoryName: category.client-extensions
     type: customElement
     urls:
