--- a/client-extensions/theme-spritemap-client-extension/package.json
+++ b/client-extensions/theme-spritemap-client-extension/package.json
@@ -2,7 +2,7 @@
 	"dependencies": {
 		"@liferay/dxp-7.4": "*"
 	},
-	"name": "theme-spritemap-client-extension:",
+	"name": "theme-spritemap-client-extension",
 	"scripts": {
 		"build": "liferay build",
 		"clean": "liferay clean",
