--- a/client-extensions/react-fds-cell-renderer-typescript/package.json
+++ b/client-extensions/react-fds-cell-renderer-typescript/package.json
@@ -2,7 +2,8 @@
   "name": "react-fds-cell-renderer-typescript",
   "version": "1.0.0",
   "dependencies": {
-    "@liferay/dxp-7.4": "*"
+    "@liferay/dxp-7.4": "*",
+    "@liferay/js-api": "^0.2.0-pre.0"
   },
   "main": "./src/index.tsx",
   "scripts": {
