--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ microsoft.translator.subscription.key=
 liferay.workspace.product=dxp-7.4-u69
 
 liferay.workspace.node.package.manager=yarn
+
+org.gradle.console=plain
