chore: configure live dev

--- a/client-extensions/my-shared-project/liferay-sample-fds-cell-renderer/package.json
+++ b/client-extensions/my-shared-project/liferay-sample-fds-cell-renderer/package.json
@@ -8,6 +8,6 @@
   "main": "./src/index.tsx",
   "scripts": {
     "build": "liferay build",
-    "start": "liferay start"
+    "start": "PORT=8082 liferay start"
   }
 }
